--- a/Assignments/HTML & CSS/Project 09/index.html
+++ b/Assignments/HTML & CSS/Project 09/index.html
@@ -60,10 +60,9 @@
             <h2>the most popular game about fighting and wars</h2>
             <div class="cards_game">
                 <div class="card_game">
-                  <div class="card_image">
+                  <div class="card_image1">
                     <img class="img_game" src="./Assets/Photos/image 2.png" alt="game_image">
-                    <div class="blur"></div>
-                    <!-- <img class="blur" src="./Assets/Photos/image 2.png" alt="game_image"> -->
+                    <div class="blur1"></div>
                   </div>
                     <div class="card_info">
                       <div class="card_left">
@@ -77,12 +76,134 @@
                             <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
                         </div> 
                       </div>
-                      <div class="right">
-                        <button>Download</button>
+                        <button class="card_btn">Download</button>
+                    </div>
+                </div>
+                <div class="card_game">
+                  <div class="card_image2">
+                    <img class="img_game" src="./Assets/Photos/image 4.png" alt="game_image">
+                    <div class="blur2"></div>
+                  </div>
+                    <div class="card_info">
+                      <div class="card_left">
+                        <h3>The warriors IX</h3>
+                        <p>Actions</p>
+                        <div class="stars">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                        </div> 
                       </div>
+                        <button class="card_btn">Download</button>
+                    </div>
+                </div>
+                <div class="card_game">
+                  <div class="card_image3">
+                    <img class="img_game" src="./Assets/Photos/image 3.png" alt="game_image">
+                    <div class="blur3"></div>
+                  </div>
+                    <div class="card_info">
+                      <div class="card_left">
+                        <h3>Pubjken Dak</h3>
+                        <p>Actions</p>
+                        <div class="stars">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                        </div> 
+                      </div>
+                        <button class="card_btn">Download</button>
+                    </div>
+                </div>
+                <div class="card_game">
+                  <div class="card_image4">
+                    <img class="img_game" src="./Assets/Photos/Rectangle 56.png" alt="game_image">
+                    <div class="blur4"></div>
+                  </div>
+                    <div class="card_info">
+                      <div class="card_left">
+                        <h3>Garela Manihem</h3>
+                        <p>Actions</p>
+                        <div class="stars">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                            <img class="star" src="./Assets/Icons/Star 1.svg" alt="star">
+                        </div> 
+                      </div>
+                        <button class="card_btn">Download</button>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!-- Game_Description -->
+        <div class="game_des">
+          <div class="game_left">
+            <img src="./Assets/Photos/Rectangle 57.png" alt="gameImage">
+         </div>
+            <div class="game_right">
+              <h2>a war game that</br> will get your adrenaline pumping</h2>
+              <p>This is the best episode that we present to you, we collect all over</br> asia and we present it to you only for you, our special customer, this is an</br> episode discussing the design of various types of design</p>
+              <div class="game_btn">
+                <button class="explorenow">Explore Now</button>
+                <button class="learnmore">Learn More</button>
+              </div>
+          </div>
+        </div>
+
+        <!-- Game Week -->
+        <div class="week">
+          <div class="week_heading">
+            <h2>Game Recommend For You This Week</h2>
+            <div class="week_boxarrow">
+              <div class="leftarrow"><img src="./Assets/Icons/leftArrow.svg" alt="leftArrow"></div>
+              <div class="rightarrow"><img src="./Assets/Icons/nextArrow.svg" alt=""></div>
+            </div>
+          </div>
+          <div class="week_cards">
+            <div class="wcard">
+              <img class="wcard_img" src="./Assets/Photos/Rectangle 75.png" alt="game">
+              <div class="week_para">
+                <h3 class="wcard_heading">The world's strongest human battle</h3>
+                <p class="wcard_subheading">Action, Sport</p>
+                <p class="wcard_para">This is a game about the battle of the</br> strongest humans on earth</p>
+                <button class="wcard_btn">Download</button>
+              </div>
+            </div>
+            <div class="wcard">
+              <img class="wcard_img" src="./Assets/Photos/Rectangle 76.png" alt="game">
+              <div class="week_para">
+                <h3 class="wcard_heading">Adventure in snake cave danger</h3>
+                <p class="wcard_subheading">Adventure, Actions</p>
+                <p class="wcard_para">Adventure in a dangerous snake cave with</br> friends who were going on vacation</p>
+                <button class="wcard_btn">Download</button>
+              </div>
+            </div>
+            <div class="wcard">
+              <img class="wcard_img" src="./Assets/Photos/Rectangle 77.png" alt="game">
+              <div class="week_para">
+                <h3 class="wcard_heading">Super hero wearing spider mask</h3>
+                <p class="wcard_subheading">Strategy, Actions</p>
+                <p class="wcard_para">A superhero wearing a spider mask who</br> helps many people in the world</p>
+                <button class="wcard_btn">Download</button>
+              </div>
+            </div>
+            <div class="wcard">
+              <img class="wcard_img" src="./Assets/Photos/Rectangle 78.png" alt="game">
+              <div class="week_para">
+                <h3 class="wcard_heading">Masked hero with a million powers</h3>
+                <p class="wcard_subheading">Adventure</p>
+                <p class="wcard_para">Omongken is the best podcast that you is</br> the best podcast that you can use </p>
+                <button class="wcard_btn">Download</button>
+              </div>
+            </div>
+          </div>
         </div>
   </body>
 </html>
