--- a/Assignments/HTML & CSS/Project 09/index.html
+++ b/Assignments/HTML & CSS/Project 09/index.html
@@ -205,5 +205,61 @@
             </div>
           </div>
         </div>
+
+        <!-- Most played game -->
+        <div class="mostplayed">
+          <h2>Most Played Games<br> Of The Year</h2>
+          <p>We have data on the most played games this year and as a result, games<br> about battles and wars are very popular with gamers at this time, so we recommend<br> this game into your cart to be used as your game</p>
+          <img class="mostplayed_1" src="./Assets/Photos/Rectangle 17.png" alt="gameImage">
+          <img class="mostplayed_2" src="./Assets/Photos/Rectangle 18.png" alt="gameImage">
+          <img class="mostplayed_3" src="./Assets/Photos/Rectangle 90.png" alt="gameImage">
+          <img class="mostplayed_4" src="./Assets/Icons/GAMES OF THE WORLD.svg" alt="line">
+        </div>
+
+        <!-- Gamer -->
+        <div class="gamer">
+          <h2>Have An Unforgettable<br> Experience</h2>
+          <p>Have an Unforgettable experience and play now to<br> get attractive promos</p>
+          <button>Get started</button>
+        </div>
+
+        <!-- footer -->
+        <div class="footer">
+          <div class="footer_sec1">
+            <img src="./Assets/Icons/Logo.svg" alt="Logo">
+            <p>Play lots of games here and<br> subscribe right away</p>
+            <div class="footer_icon">
+              <img src="./Assets/Icons/facebook.svg" alt="facebook">
+              <img src="./Assets/Icons/instagram.svg" alt="instagram">
+              <img src="./Assets/Icons/twitter.svg" alt="twitter">
+            </div>
+            <ul class="articles">
+              <li class="footer_bold">Articles</li>
+              <li>Crowfunding</li>
+              <li>Website donations</li>
+              <li>Careers</li>
+              <li>Event registrations</li>
+              <li>Newsrooms</li>
+            </ul>
+            <ul class="leagues">
+              <li class="footer_bold">Leagues</li>
+              <li>Our story</li>
+              <li>Community driven</li>
+              <li>Our Customer</li>
+              <li>Expert support</li>
+            </ul>
+            <ul class="team">
+              <li class="footer_bold">Team</li>
+              <li>About us</li>
+              <li>FAQ</li>
+              <li>Privacy & Policy</li>
+              <li>Help</li>
+            </ul>
+            <ul class="getintouch">
+              <li class="footer_bold">Get in touch</li>
+              <li>(704)555-0127</li>
+            </ul>
+          </div>
+        </div>
   </body>
 </html>
