--- a/Assignments/HTML & CSS/Project 09/index.html
+++ b/Assignments/HTML & CSS/Project 09/index.html
@@ -224,42 +224,49 @@
         </div>
 
         <!-- footer -->
-        <div class="footer">
-          <div class="footer_sec1">
-            <img src="./Assets/Icons/Logo.svg" alt="Logo">
-            <p>Play lots of games here and<br> subscribe right away</p>
-            <div class="footer_icon">
-              <img src="./Assets/Icons/facebook.svg" alt="facebook">
-              <img src="./Assets/Icons/instagram.svg" alt="instagram">
-              <img src="./Assets/Icons/twitter.svg" alt="twitter">
+        <div class="lastpage">
+          <div class="footer">
+            <div class="footer_sec1">
+              <img src="./Assets/Icons/Logo.svg" alt="Logo">
+              <p>Play lots of games here and<br> subscribe right away</p>
+              <div class="footers_icon">
+                <img src="./Assets/Icons/instagram.svg" alt="instagram">
+                <img src="./Assets/Icons/facebook.svg" alt="facebook">
+                <img src="./Assets/Icons/twitter.svg" alt="twitter">
+              </div>
             </div>
-            <ul class="articles">
-              <li class="footer_bold">Articles</li>
-              <li>Crowfunding</li>
-              <li>Website donations</li>
-              <li>Careers</li>
-              <li>Event registrations</li>
-              <li>Newsrooms</li>
-            </ul>
-            <ul class="leagues">
-              <li class="footer_bold">Leagues</li>
-              <li>Our story</li>
-              <li>Community driven</li>
-              <li>Our Customer</li>
-              <li>Expert support</li>
-            </ul>
-            <ul class="team">
-              <li class="footer_bold">Team</li>
-              <li>About us</li>
-              <li>FAQ</li>
-              <li>Privacy & Policy</li>
-              <li>Help</li>
-            </ul>
-            <ul class="getintouch">
-              <li class="footer_bold">Get in touch</li>
-              <li>(704)555-0127</li>
-            </ul>
+              <ul class="articles">
+                <li class="footer_bold">Articles</li>
+                <li>Crowfunding</li>
+                <li>Website donations</li>
+                <li>Careers</li>
+                <li>Event registrations</li>
+                <li>Newsrooms</li>
+              </ul>
+              <ul class="leagues">
+                <li class="footer_bold">Leagues</li>
+                <li>Our story</li>
+                <li>Community driven</li>
+                <li>Our Customer</li>
+                <li>Expert support</li>
+              </ul>
+              <ul class="team">
+                <li class="footer_bold">Team</li>
+                <li>About us</li>
+                <li>FAQ</li>
+                <li>Privacy & Policy</li>
+                <li>Help</li>
+              </ul>
+              <ul class="getintouch">
+                <li class="footer_bold">Get in touch</li>
+                <li>(704)555-0127</li>
+              </ul>
           </div>
+          <p class="name">Made With <span>❤</span> Archit Chaurasia</p>
+        </div>  
+        <!-- Footer Blank -->
+        <div class="footerblank">
+
         </div>
   </body>
 </html>
