--- a/Assignments/HTML & CSS/Project 09/index.html
+++ b/Assignments/HTML & CSS/Project 09/index.html
@@ -262,7 +262,7 @@
                 <li>(704)555-0127</li>
               </ul>
           </div>
-          <p class="name">Made With <span>❤</span> Archit Chaurasia</p>
+          <p class="name">Made With <span>❤</span> <a href="https://www.linkedin.com/in/archit-chaurasia-4b460b7a/" target="_blank">Archit Chaurasia</a></p>
         </div>  
         <!-- Footer Blank -->
         <div class="footerblank">
