--- a/Assignments/HTML & CSS/Project 10/index.html
+++ b/Assignments/HTML & CSS/Project 10/index.html
@@ -58,12 +58,194 @@
                 <div class="estate_info">
                     <div class="estate_left">
                         <h3 class="estate_heading">Mixtownia</h3>
-                        <p class="estate_para">$$205,500</p>
+                        <p class="estate_para">$205,500</p>
+                    </div>
+                    <button class="estate_btn">Detail</button>
+                </div>
+            </div>
+            <div class="estatecard_1">
+                <div class="estate_image">
+                    <img class="img_2" src="./Photos/cardImage2.png" alt="cardImage1">
+                </div>
+                <div class="estate_info">
+                    <div class="estate_left">
+                        <h3 class="estate_heading">Mirtawan</h3>
+                        <p class="estate_para">$102,200</p>
+                    </div>
+                    <button class="estate_btn">Detail</button>
+                </div>
+            </div>
+            <div class="estatecard_1">
+                <div class="estate_image">
+                    <img class="img_3" src="./Photos/cardImage3.png" alt="cardImage1">
+                </div>
+                <div class="estate_info">
+                    <div class="estate_left">
+                        <h3 class="estate_heading">Wartawan</h3>
+                        <p class="estate_para">$135,900</p>
+                    </div>
+                    <button class="estate_btn">Detail</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="estate_2">
+            <div class="estatecard_2">
+                <div class="estate_image">
+                    <img class="img_4" src="./Photos/cardImage4.png" alt="cardImage1">
+                </div>
+                <div class="estate_info">
+                    <div class="estate_left">
+                        <h3 class="estate_heading">Mixtownia</h3>
+                        <p class="estate_para">$205,500</p>
+                    </div>
+                    <button class="estate_btn">Detail</button>
+                </div>
+            </div>
+            <div class="estatecard_2">
+                <div class="estate_image">
+                    <img class="img_5" src="./Photos/cardImage5.png" alt="cardImage1">
+                </div>
+                <div class="estate_info">
+                    <div class="estate_left">
+                        <h3 class="estate_heading">Mirtawan</h3>
+                        <p class="estate_para">$102,200</p>
+                    </div>
+                    <button class="estate_btn">Detail</button>
+                </div>
+            </div>
+            <div class="estatecard_2">
+                <div class="estate_image">
+                    <img class="img_6" src="./Photos/cardImage6.png" alt="cardImage1">
+                </div>
+                <div class="estate_info">
+                    <div class="estate_left">
+                        <h3 class="estate_heading">Wartawan</h3>
+                        <p class="estate_para">$135,900</p>
+                    </div>
+                    <button class="estate_btn">Detail</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="estate_3">
+            <div class="estatecard_3">
+                <div class="estate_image">
+                    <img class="img_7" src="./Photos/cardImage7.png" alt="cardImage1">
+                </div>
+                <div class="estate_info">
+                    <div class="estate_left">
+                        <h3 class="estate_heading">Mixtownia</h3>
+                        <p class="estate_para">$205,500</p>
+                    </div>
+                    <button class="estate_btn">Detail</button>
+                </div>
+            </div>
+            <div class="estatecard_3">
+                <div class="estate_image">
+                    <img class="img_8" src="./Photos/cardImage8.png" alt="cardImage1">
+                </div>
+                <div class="estate_info">
+                    <div class="estate_left">
+                        <h3 class="estate_heading">Mirtawan</h3>
+                        <p class="estate_para">$102,200</p>
+                    </div>
+                    <button class="estate_btn">Detail</button>
+                </div>
+            </div>
+            <div class="estatecard_3">
+                <div class="estate_image">
+                    <img class="img_9" src="./Photos/cardImage9.png" alt="cardImage1">
+                </div>
+                <div class="estate_info">
+                    <div class="estate_left">
+                        <h3 class="estate_heading">Wartawan</h3>
+                        <p class="estate_para">$135,900</p>
                     </div>
                     <button class="estate_btn">Detail</button>
                 </div>
             </div>
         </div>
     </div>  
+
+    <div class="modern">
+        <div class="modern_left">
+            <div class="modern_left1">
+                <img class="feature_1" src="./Icons/featureImageBg1.svg" alt="img">
+                <div class="image1">
+                    <img src="./Photos/featuresImage1.png" alt="image">
+                </div>
+            </div>
+            <div class="modern_right1">
+                <h2>Modern, Trendy, Affordable!</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate unde doloribus soluta id quos ex?</p> 
+                <button class="modern_btn">Early Bird Book</button>
+            </div>
+        </div>
+
+        <div class="modern_right">
+            <div class="modern_left2">
+                <h2>Unique House for Long Term!</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum a natus corrupti rem non.</p> 
+                <button class="modern_btn">Early Bird Book</button>
+            </div>
+            <div class="modern_right2">
+                <img class="feature_2" src="./Icons/featureImageBg2.png " alt="img">
+                <div class="image2">
+                    <img src="./Photos/featuresImage2.png" alt="image">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Subscribe -->
+    <div class="subscribe">
+        <div class="bk_purple">
+            <h2>Subscribe to Our Newsletter<br> For Weekly Article Update.</h2>
+            <p>We have real estate-related blog so we can share our thought and rutinity in our blog that updated weekly. We will not spam you, we promise.</p>
+            <div class="subscribe_box">
+                <input type="text" placeholder="Enter your e-mail address">
+                <button>Subscribe</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+        <div class="footer_info">
+            <div class="footer_left">
+                <img src="./Icons/Logo.svg" alt="logo">
+                <div class="icons">
+                    <img src="./Icons/facebook.png" alt="facebook">
+                    <img src="./Icons/twitter.png" alt="twitter">
+                    <img src="./Icons/instagram.png" alt="instagram">
+                </div>
+                <p>2022 Award winning Real estate<br> and Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="footer_right">
+                <ul class="footer_list">
+                    <li>Location</li>
+                    <li>America</li>
+                    <li>Asia</li>
+                    <li>Europe</li>
+                    <li>Africa</li>
+                </ul>
+                <ul class="footer_list">
+                    <li>Contact</li>
+                    <li>About Me</li>
+                    <li>Teams</li>
+                    <li>Profile</li>
+                    <li>FAQ</li>
+                </ul>
+                <ul class="footer_list">
+                    <li>Legals</li>
+                    <li>Privacy</li>
+                    <li>Disclaimer</li>
+                    <li>Terms</li>
+                    <li>Company</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
