--- a/Assignments/HTML & CSS/Project 10/index.html
+++ b/Assignments/HTML & CSS/Project 10/index.html
@@ -11,7 +11,7 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -214,7 +214,7 @@
     <div class="footer">
         <div class="footer_info">
             <div class="footer_left">
-                <img src="./Icons/Logo.svg" alt="logo">
+                <img class="footer_logo" src="./Icons/Logo.svg" alt="logo">
                 <div class="icons">
                     <img src="./Icons/facebook.png" alt="facebook">
                     <img src="./Icons/twitter.png" alt="twitter">
@@ -245,6 +245,9 @@
                     <li>Company</li>
                 </ul>
             </div>
+        </div>
+        </div>
+          <p class="name">Made With <span>❤</span> <a href="https://www.linkedin.com/in/archit-chaurasia-4b460b7a/" target="_blank">Archit Chaurasia</a></p>
         </div>
     </div>
 </body>
