--- a/Assignments/HTML & CSS/Project 07/index.html
+++ b/Assignments/HTML & CSS/Project 07/index.html
@@ -80,7 +80,7 @@
     <div class="section3">
         <div class="sec_heading3">
             <span>The best payment service for <span class="purple_sec3">your transactions.</span></span>
-            <p class="cardfont">The following are the services we provide to users, with the services we maximize it is hoped that users are satisfied with what we provide.</p>
+            <p class="cardfont">The following are the services we provide</br> to users, with the services we maximize</br> it is hoped that users are satisfied with</br> what we provide.</p>
         </div>
         <div class="cards">
             <div class="card1">
