--- a/Assignments/HTML & CSS/Project 07/index.html
+++ b/Assignments/HTML & CSS/Project 07/index.html
@@ -169,5 +169,8 @@
             </ul>
         </div>
     </div>
+    <p class="name">Made With <span>❤</span> <a href="https://www.linkedin.com/in/archit-chaurasia-4b460b7a/" target="_blank">Archit Chaurasia</a></p>
+</div>  
+
 </body>
 </html>
