--- a/Assignments/Javascript/weather website/index.html
+++ b/Assignments/Javascript/weather website/index.html
@@ -72,6 +72,41 @@
         </div>
       </section>
     </div>
+
+    <div class="forecast">
+      <div class="fore_card">
+        <p id="fore_day">Monday</p>
+        <img src="" id="foreImg" alt="icon">
+        <p id="fore_status">__</p>
+      </div>
+
+      <div class="fore_card">
+        <p id="fore_day">Tuesday</p>
+        <img src="" id="foreImg" alt="icon">
+        <p id="fore_status">__</p>
+      </div>
+
+      <div class="fore_card">
+        <p id="fore_day">Wednesday</p>
+        <img src="" id="foreImg" alt="icon">
+        <p id="fore_status">__</p>
+      </div>
+
+      <div class="fore_card">
+        <p id="fore_day">Thursday</p>
+        <img src="" id="foreImg" alt="icon">
+        <p id="fore_status">__</p>
+      </div>
+      
+      <div class="fore_card">
+        <p id="fore_day">Friday</p>
+        <img src="" id="foreImg" alt="icon">
+        <p id="fore_status">__</p>
+      </div>
+    </div>
+    <!-- <footer>
+      <p>Weather Version 1.0</p>
+    </footer> -->
   </body>
 
   <!-- adding the javascript file -->
