--- a/Assignments/Javascript/weather website/index.html
+++ b/Assignments/Javascript/weather website/index.html
@@ -75,33 +75,33 @@
 
     <div class="forecast">
       <div class="fore_card">
-        <p id="fore_day">Monday</p>
-        <img src="" id="foreImg" alt="icon">
-        <p id="fore_status">__</p>
+        <p id="fore_day1">Monday</p>
+        <img src="" id="foreImg1" alt="icon">
+        <p id="fore_status1">__</p>
       </div>
 
       <div class="fore_card">
-        <p id="fore_day">Tuesday</p>
-        <img src="" id="foreImg" alt="icon">
-        <p id="fore_status">__</p>
+        <p id="fore_day2">Tuesday</p>
+        <img src="" id="foreImg2" alt="icon">
+        <p id="fore_status2">__</p>
       </div>
 
       <div class="fore_card">
-        <p id="fore_day">Wednesday</p>
-        <img src="" id="foreImg" alt="icon">
-        <p id="fore_status">__</p>
+        <p id="fore_day3">Wednesday</p>
+        <img src="" id="foreImg3" alt="icon">
+        <p id="fore_status3">__</p>
       </div>
 
       <div class="fore_card">
-        <p id="fore_day">Thursday</p>
-        <img src="" id="foreImg" alt="icon">
-        <p id="fore_status">__</p>
+        <p id="fore_day4">Thursday</p>
+        <img src="" id="foreImg4" alt="icon">
+        <p id="fore_status4">__</p>
       </div>
       
       <div class="fore_card">
-        <p id="fore_day">Friday</p>
-        <img src="" id="foreImg" alt="icon">
-        <p id="fore_status">__</p>
+        <p id="fore_day5">Friday</p>
+        <img src="" id="foreImg5" alt="icon">
+        <p id="fore_status5">__</p>
       </div>
     </div>
     <!-- <footer>
