--- a/Assignments/Javascript/weather website/index.html
+++ b/Assignments/Javascript/weather website/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./src/cloudy.png" type="image/icon">
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
     <title>Weather App</title>
 
     <!-- adding the css file -->
@@ -66,7 +69,7 @@
 
           <!-- displaying the weather condition -->
           <div class="card">
-            <img width="20px" id="logoImage" src="" alt="icon" />
+            <img width="20px" id="logoImage" width="64px" src="./src/cloudy.png" alt="icon" />
             <p id="weatherStatus">__</p>
           </div>
         </div>
@@ -76,37 +79,51 @@
     <div class="forecast">
       <div class="fore_card">
         <p id="fore_day1">Monday</p>
-        <img src="" id="foreImg1" alt="icon">
+        <img width="64px" src="./src/cloudy.png" id="foreImg1" alt="icon">
         <p id="fore_status1">__</p>
       </div>
 
       <div class="fore_card">
         <p id="fore_day2">Tuesday</p>
-        <img src="" id="foreImg2" alt="icon">
+        <img width="64px" src="./src/cloudy.png" id="foreImg2" alt="icon">
         <p id="fore_status2">__</p>
       </div>
 
       <div class="fore_card">
         <p id="fore_day3">Wednesday</p>
-        <img src="" id="foreImg3" alt="icon">
+        <img width="64px" src="./src/cloudy.png" id="foreImg3" alt="icon">
         <p id="fore_status3">__</p>
       </div>
 
       <div class="fore_card">
         <p id="fore_day4">Thursday</p>
-        <img src="" id="foreImg4" alt="icon">
+        <img width="64px" src="./src/cloudy.png" id="foreImg4" alt="icon">
         <p id="fore_status4">__</p>
       </div>
       
       <div class="fore_card">
         <p id="fore_day5">Friday</p>
-        <img src="" id="foreImg5" alt="icon">
+        <img width="64px" src="./src/cloudy.png" src="" id="foreImg5" alt="icon">
         <p id="fore_status5">__</p>
       </div>
+
+      <div class="fore_card">
+        <p id="fore_day6">Saturday</p>
+        <img width="64px" src="./src/cloudy.png" id="foreImg6" alt="icon">
+        <p id="fore_status6">__</p>
+      </div>
+  
+      <div class="fore_card">
+        <p id="fore_day7">Sunday</p>
+        <img width="64px" src="./src/cloudy.png" id="foreImg7" alt="icon">
+        <p id="fore_status7">__</p>
+      </div>
     </div>
-    <!-- <footer>
-      <p>Weather Version 1.0</p>
-    </footer> -->
+
+   
+    <footer>
+      <p>Weather app Version 1.1</p>
+    </footer>
   </body>
 
   <!-- adding the javascript file -->
