--- a/Assignments/Javascript/weather website/index.html
+++ b/Assignments/Javascript/weather website/index.html
@@ -78,43 +78,43 @@
 
     <div class="forecast">
       <div class="fore_card">
-        <p id="fore_day1">Monday</p>
+        <p id="fore_day1">Day</p>
         <img width="64px" src="./src/cloudy.png" id="foreImg1" alt="icon">
         <p id="fore_status1">__</p>
       </div>
 
       <div class="fore_card">
-        <p id="fore_day2">Tuesday</p>
+        <p id="fore_day2">Day</p>
         <img width="64px" src="./src/cloudy.png" id="foreImg2" alt="icon">
         <p id="fore_status2">__</p>
       </div>
 
       <div class="fore_card">
-        <p id="fore_day3">Wednesday</p>
+        <p id="fore_day3">Day</p>
         <img width="64px" src="./src/cloudy.png" id="foreImg3" alt="icon">
         <p id="fore_status3">__</p>
       </div>
 
       <div class="fore_card">
-        <p id="fore_day4">Thursday</p>
+        <p id="fore_day4">Day</p>
         <img width="64px" src="./src/cloudy.png" id="foreImg4" alt="icon">
         <p id="fore_status4">__</p>
       </div>
       
       <div class="fore_card">
-        <p id="fore_day5">Friday</p>
+        <p id="fore_day5">Day</p>
         <img width="64px" src="./src/cloudy.png" src="" id="foreImg5" alt="icon">
         <p id="fore_status5">__</p>
       </div>
 
       <div class="fore_card">
-        <p id="fore_day6">Saturday</p>
+        <p id="fore_day6">Day</p>
         <img width="64px" src="./src/cloudy.png" id="foreImg6" alt="icon">
         <p id="fore_status6">__</p>
       </div>
   
       <div class="fore_card">
-        <p id="fore_day7">Sunday</p>
+        <p id="fore_day7">Day</p>
         <img width="64px" src="./src/cloudy.png" id="foreImg7" alt="icon">
         <p id="fore_status7">__</p>
       </div>
@@ -122,10 +122,12 @@
 
    
     <footer>
-      <p>Weather app Version 1.1</p>
+      <p>Weather app Version 1.1 | <span class="name">Made With <span>❤</span> <a href="https://www.linkedin.com/in/archit-chaurasia-4b460b7a/" target="_blank">Archit Chaurasia</a></span>
+    </p>
     </footer>
   </body>
 
   <!-- adding the javascript file -->
   <script src="./script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
 </html>
