--- a/Projects/Javascript/Currency Converter/index.html
+++ b/Projects/Javascript/Currency Converter/index.html
@@ -20,14 +20,9 @@
             <div class="drop-list">
                 <div class="from">
                     <p>From</p>
-                    <div class="select-box">
+                    <div class="select-box" >
                         <img src= "https://flagsapi.com/IN/flat/64.png" alt="flag">
                         <select>
-                            <option value="INR">INR</option>
-                            <option value="USD">USD</option>
-                            <option value="NPR">NPR</option>
-                            <option value="PKR">PKR</option>
-                            <option value="MAD">MAD</option>
                         </select>
                     </div>
                 </div>
@@ -36,18 +31,13 @@
                 <div class="to">
                     <p>To</p>
                     <div class="select-box">
-                        <img src= "https://flagsapi.com/NP/flat/64.png" alt="flag">
+                        <img src= "https://flagsapi.com/US/flat/64.png" alt="flag">
                         <select>
-                            <option value="INR">INR</option>
-                            <option value="USD">USD</option>
-                            <option value="NPR">NPR</option>
-                            <option value="PKR">PKR</option>
-                            <option value="MAD">MAD</option>
                         </select>
                     </div>
                 </div>
             </div>
-            <div class="exchange-rate">1 INR = 0.012 USD</div>
+            <div class="exchange-rate">Result Exchange Rate</div>
             <button>Get Exchange Rate</button>
         </form>
     </div>
