--- a/Projects/Javascript/Currency Converter/index.html
+++ b/Projects/Javascript/Currency Converter/index.html
@@ -21,7 +21,7 @@
                 <div class="from">
                     <p>From</p>
                     <div class="select-box" >
-                        <img src= "https://flagsapi.com/IN/flat/64.png" alt="flag">
+                        <img src= "./img/money.png" alt="globe">
                         <select>
                         </select>
                     </div>
@@ -31,13 +31,13 @@
                 <div class="to">
                     <p>To</p>
                     <div class="select-box">
-                        <img src= "https://flagsapi.com/US/flat/64.png" alt="flag">
+                        <img src= "./img/money.png" alt="globe">
                         <select>
                         </select>
                     </div>
                 </div>
             </div>
-            <div class="exchange-rate">Result Exchange Rate</div>
+            <div class="exchange-rate"></div>
             <button>Get Exchange Rate</button>
         </form>
     </div>
